# pedrosh

./: AUTHORS  INSTALL  Makefile.am  ProjectHome.md  client.cc  config.h.in  configure.ac  example_task2.cc  named-pipes.h  params-enum.h  params-int.h  params-ipv4.cc  params-ipv4.h  params-string.cc  params.h  pedrosh-compl.h  pedrosh-getopt.h  pedrosh-i.h  pedrosh.ggo  pedrosh.h  plugin-ipc.cc  plugin-ipc.h  plugin-stub.h  plugins.cc  utils.cc
dependencies/: ipc-linux-fix.patch
example-mgmtfs/: @doc
example-mgmtfs/!/: @help
example-mgmtfs/ethernet/: @doc  @help
example-mgmtfs/misc/script/: @exec
misc/: corrigent.sh
testsuite/pedrosh.test/: pedrosh.exp
trunk/: ChangeLog  Makefile.svn  debug.h  named-pipes.cc  params-datetime.cc  params-datetime.h  params-enum.cc  params-int.cc  params-ipv6.cc  params-ipv6.h  params-string.h  params.cc  pedrosh-compl.cc  pedrosh-getopt.cc  pedrosh.cc  plugin-globals.cc  plugin-globals.h  plugin-stub.cc  plugins.h  utils.h
trunk/example-mgmtfs/@globals/doc/: @system  show-help.sh
trunk/example-mgmtfs/@globals/system/shutdown/: @system
trunk/example-mgmtfs/ethernet/disable/: @help
trunk/example-mgmtfs/ethernet/enable/: @help
trunk/example-mgmtfs/misc/script/: @help
trunk/example-mgmtfs/misc/version/: @help
trunk/example-mgmtfs/params-test/enum-test/enum2/: @values
trunk/example-mgmtfs/params-test/enum-test/enum3/: @values
trunk/tests/: Makefile.am  params_test.cc  retester.c  test_client.cc  utcompl.cc
trunk/testsuite/config/: unix.exp
